RUNES!!!
Runes runes and more runes, implements 4 location runes, 5 target runes, 5 stages of the power rune, two function runes (protection and portal) and one nature rune (destruction) also adds the power gem and the runic altar. No crafting recipes yet, but it works